syntax = "proto3";

option go_package = "./;proto";
option java_package = "com.github.go2o.rpc";

// 商家
message SMerchant {
  /** 编号 */
  int64 id = 1;
  /** 会员编号 */
  int64 memberId = 2;
  /** 登录用户 */
  string loginUser = 3;
  /** 登录密码 */
  string loginPwd = 4;
  // 盐
  string salt = 5;
  /** 名称 */
  string name = 6;
  /** 公司名称 */
  string companyName = 7;
  /** 是否自营 */
  int32 selfSales = 8;
  /** 商户等级 */
  int32 level = 9;
  /** 标志 */
  string logo = 10;
  /** 省 */
  int32 province = 11;
  /** 市 */
  int32 city = 12;
  /** 区 */
  int32 district = 13;
  /** 标志 */
  int32 flag = 14;
  /** 是否启用 */
  int32 enabled = 15;
  /** 过期时间 */
  int64 expiresTime = 16;
  /** 最后登录时间 */
  int64 lastLoginTime = 17;
}


// 保存商户请求
message SSaveMerchantParams{
  // 编号
  int64 id = 1;
  // 登录密码
  string password = 4;
  // 名称
  string mchName = 7;
  // 标志
  int32 flag = 9;
  // 商户等级
  int32 level = 10;
  // 所在省
  int32 province = 11;
  // 所在市
  int32 city = 12;
  // 所在区
  int32 district = 13;
  // 公司地址
  string address = 14;
  // 标志
  string logo = 15;
  // 公司电话
  string tel = 16;
  // 状态: 0:待审核 1:已开通  2:停用  3: 关闭
  int32 status = 17;
  // 过期时间
  int32 expiresTime = 18;
  // 最后登录时间
  int32 lastLoginTime = 19;
  // 创建时间
  int32 createTime = 20;
}

// 商家
message SMerchantPack {
  /** 登录用户 */
  string loginUser = 1;
  /** 登录密码 */
  string loginPwd = 2;
  // 盐
  string salt = 3;
  /** 名称 */
  string name = 4;
  /** 是否自营 */
  sint32 selfSales = 5;
  /** 店铺名称 */
  string shopName = 6;
  /** 标志 */
  string shopLogo = 7;
  /** 电话 */
  string telephone = 8;
  /** 地址 */
  string addr = 9;
}

// 商户注册请求
message CreateMerchantRequest {
  // 登录用户
  string username = 1;
  // 会员编号
  int64 memberId = 2;
  // 是否自营
  int32 isSelf = 8;
  // 商户信息
  SSaveMerchantParams mch = 3;
  /** 过期时间,0表示永远不过期 */
  int64 expiresTime = 3;
}

message MerchantCreateResponse {
  int32 errCode = 1;
  string errMsg = 2;
  int64 id = 3;
}

message SaveMerchantRequest {
  /** 编号 */
  int64 id = 1;
  /** 会员编号 */
  int64 memberId = 2;
  /** 名称 */
  string name = 3;
  /** 是否自营 */
  int32 selfSales = 4;
  /** 商户等级 */
  int32 level = 5;
  /** 标志 */
  string logo = 6;
  /** 过期时间 */
  int64 expiresTime = 7;
}


/** 更换会员绑定请求 */
message ChangeMemberBindRequest{
  /** 商户编号 */
  int64 merchantId = 1;
  /** 会员用户名 */
  string username = 2;
}

message MchUserPwdRequest {
  string username = 1;
  string password = 2;
}
// 用户登录响应
message MchLoginResponse{
  // 错误码
  int32 errCode = 1;
  // 错误消息
  string errMsg = 2;
  // 会员编号
  int64 merchantId = 3;
  // 店铺编号
  int64 shopId = 4;
}

message SyncWSItemsResponse {
  map<string, sint32> value = 1;
}

message STradeConfListResponse {
  repeated STradeConf_ value = 1;
}

message TradeConfRequest {
  sint32 mchId = 1;
  sint32 tradeType = 2;
}
message TradeConfSaveRequest {
  sint32 mchId = 1;
  repeated STradeConf_ arr = 2;
}

// 商户交易设置
message STradeConf_ {
  // 商户编号  sint64 MchId = 1;
  // 交易类型  sint32 TradeType = 2;
  // 交易方案，根据方案来自动调整比例  sint64 PlanId = 3;
  // 交易标志  sint32 Flag = 4;
  // 交易手续费依据,1:按金额 2:按比例  sint32 AmountBasis = 5;
  // 交易费，按单笔收取  sint32 tradeFee = 6;
  // 交易手续费比例  sint32 TradeRate = 7;
}

// 商户申请信息
message SMchSignUp {
  int64 id = 1;
  // 申请单号
  string signNo = 2;
  // 会员编号
  int64 memberId = 3;
  // 用户名
  string username = 4;
  // 密码
  string password = 5;
  // 盐
  string salt = 6;
  // 商户名称号
  string mchName = 7;
  // 省
  int32 province = 8;
  // 市
  int32 city = 9;
  // 区
  int32 district = 10;
  // 详细地址
  string address = 11;
  // 店铺店铺
  string shopName = 12;
  // 公司名称
  string companyName = 13;
  // 营业执照编号
  string companyNo = 14;
  // 法人
  string personName = 15;
  // 法人身份证
  string personId = 16;
  // 法人身份证
  string personImage = 17;
  // 联系电话
  string phone = 18;
  // 营业执照图片
  string companyImage = 19;
  // 委托书
  string authDoc = 20;
  // 备注
  string remark = 21;
  // 是否通过
  int32 reviewStatus = 22;
  // 提交时间
  int64 submitTime = 23;
}

message MchReviewRequest {
  int64 merchantId = 1;
  bool pass = 2;
  string remark = 3;
}

// 企业信息
message SEnterpriseInfo {
  // 编号
  int64 id = 1;
  // 商户编号
  int64 merchantId = 2;
  // 公司名称
  string companyName = 3;
  // 公司营业执照编号
  string companyNo = 4;
  // 法人
  string personName = 5;
  // 法人身份证编号
  string personIdNo = 6;
  // 身份证验证图片(人捧身份证照相)
  string personImage = 7;
  // 公司电话
  string telephone = 8;
  // 省
  int32 province = 9;
  // 市
  int32 city = 10;
  // 区
  int32 district = 11;
  // 省+市+区字符串表示
  string location = 12;
  // 公司地址
  string address = 13;
  // 营业执照图片
  string companyImage = 14;
  // 授权书
  string authDoc = 15;
  //是否已审核
  int32 reviewStatus = 16;
  // 审核时间
  int64 reviewTime = 17;
  // 审核备注
  string reviewRemark = 18;
  //更新时间
  int64 updateTime = 19;
}

message SaveEnterpriseRequest {
  // 商户编号
  int64 merchantId = 1;
  SEnterpriseInfo value = 2;
}

// 商户账户
message SMerchantAccount {
  // 余额
  int64 balance = 1;
  // 冻结金额
  int64 freezeAmount = 2;
  // 待入账金额
  int64 awaitAmount = 3;
  // 平台赠送金额
  int64 presentAmount = 4;
  // 累计销售总额
  int64 salesAmount = 5;
  // 累计退款金额
  int64 refundAmount = 6;
  // 已提取金额
  int64 withdrawAmount = 7;
  // 线下销售金额
  int64 offlineSales = 8;
  // 更新时间
  int64 updateTime = 9;
}

message MerchantDisableRequest {
  // 商户编号
  int64 merchantId = 1;
  // 是否启用
  bool enabled = 2;
}

// 销售设置
message SMerchantSaleConf {
  // 合作商编号
  int64 merchantId = 1;
  // 是否启用分销模式
  bool fxSalesEnabled = 2;
  // 返现比例,0则不返现
  double cashBackPercent = 3;
  // 一级比例
  double cashBackTg1Percent = 4;
  // 二级比例
  double cashBackTg2Percent = 5;
  // 会员比例
  double cashBackMemberPercent = 6;
  // 自动设置订单
  bool autoSetupOrder = 7;
  // 订单超时分钟数
  int32 orderTimeOutMinute = 8;
  // 订单自动确认时间
  int32 orderConfirmAfterMinute = 9;
  // 订单超时自动收货
  int32 orderTimeOutReceiveHour = 10;
}

message SaveMerchantSaleConfRequest {
  int64 merchantId = 1;
  SMerchantSaleConf value = 2;
}

message ModifyMerchantPasswordRequest {
  int64 merchantId = 1;
  string origin = 2;
  // Md5编码后的密码
  string password = 3;
}

// 商户接口信息
message SMerchantApiInfo {
  // 商户接口编号
  string apiId = 1;
  // 密钥
  string apiSecret = 2;
  // IP白名单
  repeated string whiteList = 3;
  // 是否启用
  bool enabled = 4;
}

message MerchantApiPermRequest {
  int64 merchantId = 1;
  // 是否启用
  bool enabled = 4;
}

message WithdrawToMemberAccountRequest {
  int64 merchantId = 1;
  int64 amount = 2;
}

message MerchantChargeRequest {
  int64 merchantId = 1;
  int32 kind = 2;
  int64 amount = 3;
  string title = 4;
  string outerNo = 5;
  int64 relateUserId = 6;
}

message MerchantBuyerGroupId {
  int64 merchantId = 1;
  int64 groupId = 2;
}

message SaveMerchantBuyerGroupRequest {
  int64 merchantId = 1;
  SMerchantBuyerGroup value = 2;
}

message MerchantBuyerGroupListResponse {
  repeated SMerchantBuyerGroup value = 1;
}

// 商户客户分组
message SMerchantBuyerGroup {
  //编号
  int64 id = 1;
  //客户分组编号
  int64 groupId = 2;
  //分组别名
  string name = 3;
  // 是否启用零售
  bool enableRetail = 4;
  // 是否启用批发
  bool enableWholesale = 5;
  // 批发返点周期(天)
  int32 rebatePeriod = 6;
}

message SaveWholesaleRebateRateRequest {
  int64 merchantId = 1;
  int64 groupId = 2;
  repeated SWholesaleRebateRate value = 3;
}

message WholesaleRebateRateListResponse {
  repeated SWholesaleRebateRate value = 1;
}

// 批发客户分组返点比例设置
message SWholesaleRebateRate {
  // 编号
  int64 id = 1;
  // 批发商编号
  int64 wsId = 2;
  // 客户分组编号
  int64 buyerGroupId = 3;
  // 下限金额
  int32 requireAmount = 4;
  // 返点率
  double rebateRate = 5;
}
